test/expect/cmd.gccxml-and-c++11-stderr.txt
^error: '--castxml-gccxml' does not work with c\+\+11$
